# polystack-lab

./: .dockerignore  .env.example  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tips.txt
configs/: base.yaml
configs/datasets/: mnist.yaml
configs/views/: mnist_quadrants.yaml
scripts/: run_train.sh
src/multiviewtda/experiment/: config.py  model.py  registry.py
src/multiviewtda/experiment/datasets/: ebr_file.py
src/multiviewtda/experiment/views/: images.py  noise.py
src/multiviewtda/utils/: io.py
src/polystacklab/: config.py  core.py  model.py  pyproject.toml  registry.py  runners.py
src/polystacklab/datasets/: base.py  mnist.py  uci_heart.py
src/polystacklab/tests/: test_config.py  test_dataset_mnist.py  test_views_images.py
src/polystacklab/utils/: seeds.py
src/polystacklab/views/: __init__.py  images.py  tologigical.py
